non-msrv-tests/tests/ui/none.stderr
error: no traits found to implement, use `#[derive_where(..)` to specify some
 --> tests/ui/none.rs:2:1
  |
2 | struct Test<T>(T);
  | ^^^^^^^^^^^^^^^^^^
