non-msrv-tests/tests/ui/none.rs
#[derive(derive_where::DeriveWhere)]
struct Test<T>(T);

fn main() {}
